# vsengine

art2.7k/meeting_notes/: 10_03_2010_sunday.txt  12_01_2010_craig_test_tortise.txt  12_01_2010_wednesday.txt
document generation/: README.txt
document generation/VS Player's Manual/: Makefile.base  Makefile.live  Manual.tex  appendixA.tex  appendixB.tex  appendixC.tex  biblio.bib  overview.tex  splashnotice.tex
document generation/scripts/: jTexTools.pm  latex-make
masterserver/: api.txt  client.php  config.php  cron.php  database.sql  index.php  server.php  sha_accountserver.diff  test.html
modtools/CampaignEditor/: DESIGN.txt  build.xml  test_campaign.xml
modtools/UnitConverter/: NEWS  appwindow.py  objparse.py  png.py  uc  uc.bat  unitconverter.py  vector.py  vsmission.py  vssystem.py  vsunitcsv.py
modtools/UnitSummariser/: unit_summariser.css  unit_summariser.py  unit_summary.html
modtools/VegaMap/: build.xml  vm.bat
modtools/vsmap3d/: Makefile  addthread.cpp  addthread.h  build.bash  build.bat  changelog  faction.h  findpathdialog.cpp  findpathdialog.h  glsceene.cpp  glsceene.h  main.cpp  mainwindow.cpp  readme  (+22 more)
vega-proj/: README.txt  vegastrike.dsp  vegastrike.dsw
vega-vc10/: DevTools.sln  ReadMe.txt  dll_ver.txt  vegastrike.sln
vega-vc7/: README.txt  mesher.cbp  vegastrike.cbp  vegastrike.sln  vegastrike.vcproj
vega-vc8/: README.txt  vegastrike.sln  vegastrike.vcproj  vegastrike2008.sln  vegastrike2008.vcproj
vega-vc9/: DevTools.sln  VCExpress.diff  vegastrike.sln
vegastrike/: CMakeLists.txt  game
vegastrike/boost/1_61/: CMakeLists.txt
(+696 files in other folders)
